added TODO and updated package info

--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "reverse-dir",
-  "version": "1.0.0",
-  "description": "",
+  "name": "create-directories",
+  "version": "0.0.1",
+  "description": "Micro-library for easy directory creation. ",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
+  "keywords": [
+    "mkdir", "library", "directory", "create directory"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "arboreal": "^0.0.2",
     "mkdirp": "^0.5.1"
   }
 }
